debug class created and added, beginning of adding debug messages to other classes and beginning of automatically logging all errors to text file

--- a/New Project/New Project.vcxproj
+++ b/New Project/New Project.vcxproj
@@ -126,10 +126,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="TD2DE.h" />
+    <ClInclude Include="TD2DE_Debug.h" />
     <ClInclude Include="TD2DE_Main.h" />
     <ClInclude Include="TD2DE_Texture.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TD2DE_Debug.cpp" />
     <ClCompile Include="TD2DE_Main.cpp" />
     <ClCompile Include="TD2DE_Texture.cpp" />
   </ItemGroup>
