further work on debug message logging implemented, not yet logging to ui or any way to call it from a ui
start of audio

--- a/New Project/New Project.vcxproj.filters
+++ b/New Project/New Project.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClInclude Include="TD2DE_Engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TD2DE_Audio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
