--- a/New Project/New Project.vcxproj
+++ b/New Project/New Project.vcxproj
@@ -126,6 +126,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="TD2DE.h" />
+    <ClInclude Include="TD2DE_Audio.h" />
     <ClInclude Include="TD2DE_Debug.h" />
     <ClInclude Include="TD2DE_Engine.h" />
     <ClInclude Include="TD2DE_Main.h" />
