engine mostly prepared to start, error logging working.
currently sends sdl_mixer error due to not yet beign given settings

--- a/New Project/New Project.vcxproj
+++ b/New Project/New Project.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="TD2DE_Debug.h" />
     <ClInclude Include="TD2DE_Engine.h" />
     <ClInclude Include="TD2DE_Main.h" />
+    <ClInclude Include="TD2DE_Render.h" />
     <ClInclude Include="TD2DE_Texture.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
