--- a/New Project/New Project.vcxproj.filters
+++ b/New Project/New Project.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClInclude Include="TD2DE_Audio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TD2DE_Render.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
