--- a/New Project/New Project.vcxproj.filters
+++ b/New Project/New Project.vcxproj.filters
@@ -36,5 +36,11 @@
     <ClInclude Include="TD2DE_Render.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TD2DE_Keyboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TD2DE_Mouse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
