--- a/New Project/New Project.vcxproj
+++ b/New Project/New Project.vcxproj
@@ -129,11 +129,13 @@
     <ClInclude Include="TD2DE_Audio.h" />
     <ClInclude Include="TD2DE_Debug.h" />
     <ClInclude Include="TD2DE_Engine.h" />
+    <ClInclude Include="TD2DE_Event.h" />
     <ClInclude Include="TD2DE_Keyboard.h" />
     <ClInclude Include="TD2DE_Main.h" />
     <ClInclude Include="TD2DE_Mouse.h" />
     <ClInclude Include="TD2DE_Render.h" />
     <ClInclude Include="TD2DE_Texture.h" />
+    <ClInclude Include="TD2DE_Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
