some work on TD2DE_Object and TD2DE_Texture done
object list half way done, not yet able to create and control object list

texture list still needs to be changed from a vector
switch across to a custom linked list and send pointers to the textures in the objects as needed, wont need to keep track of an id this way

--- a/New Project/New Project.vcxproj
+++ b/New Project/New Project.vcxproj
@@ -133,9 +133,11 @@
     <ClInclude Include="TD2DE_Keyboard.h" />
     <ClInclude Include="TD2DE_Main.h" />
     <ClInclude Include="TD2DE_Mouse.h" />
+    <ClInclude Include="TD2DE_Object.h" />
     <ClInclude Include="TD2DE_Render.h" />
     <ClInclude Include="TD2DE_Texture.h" />
     <ClInclude Include="TD2DE_Timer.h" />
+    <ClInclude Include="TD2DE_Ttf.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
