linked list controling what needs to be rendered added adding to list done, still need to remove and to render all objects in the list
linked list for textures need to be completed

--- a/New Project/New Project.vcxproj
+++ b/New Project/New Project.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="TD2DE_Mouse.h" />
     <ClInclude Include="TD2DE_Object.h" />
     <ClInclude Include="TD2DE_Render.h" />
+    <ClInclude Include="TD2DE_RenderList.h" />
     <ClInclude Include="TD2DE_Texture.h" />
     <ClInclude Include="TD2DE_Timer.h" />
     <ClInclude Include="TD2DE_Ttf.h" />
