--- a/New Project/New Project.vcxproj.filters
+++ b/New Project/New Project.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClInclude Include="TD2DE_Object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TD2DE_RenderList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
